--- a/intl.zh-CN/RDS MySQL 数据库/数据安全/加密/设置白名单.md
+++ b/intl.zh-CN/RDS MySQL 数据库/数据安全/加密/设置白名单.md
@@ -1,6 +1,6 @@
 # 设置白名单
 
-创建RDS实例后，您需要设置RDS实例的白名单，以允许外部设备访问该RDS实例。
+创建RDS实例后，暂时还无法访问，您需要设置RDS实例的白名单，以允许外部设备访问该实例。
 
 设置白名单可以让RDS实例得到高级别的访问安全保护，建议您定期维护白名单。设置白名单不会影响RDS实例的正常运行。
 
@@ -21,19 +21,19 @@ RDS的白名单包括如下两种类型：
 
     IP白名单分为两种模式，您需要确认实例处于哪种网络隔离模式，根据模式查看相应的操作步骤。
 
-    -   [通用白名单模式](#d7e352)
+    -   [通用白名单模式](#d7e353)
 
         通用白名单模式中的IP地址既适用于经典网络，也适用于专有网络。这种模式有安全风险，例如期望专有网络内的某个IP访问实例，设置该IP后，经典网络内的这个IP也可以访问实例，因此建议您切换为高安全白名单模式。切换高安全白名单模式请参见[切换为高安全白名单模式](/intl.zh-CN/RDS MySQL 数据库/数据安全/加密/切换为高安全白名单模式.md)。
 
-        ![通用](https://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/zh-CN/3477559951/p12628.png)
+        ![通用](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/3477559951/p12628.png)
 
     -   [高安全白名单模式](#d7e98)
 
         高安全白名单模式中区分经典网络和专有网络，创建IP白名单分组时需要指定网络类型。如果专有网络的IP分组内放行某个IP，则只能通过这个IP在专有网络内访问该RDS实例，无法从经典网络访问该RDS实例。
 
-        ![高安全](https://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/zh-CN/3477559951/p12629.png)
+        ![高安全](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/3477559951/p12629.png)
 
--   [安全组](#d7e490)
+-   [安全组](#d7e491)
 
     安全组是一种虚拟防火墙，用于控制安全组中的ECS实例的出入流量。在RDS白名单中添加安全组后，该安全组中的ECS实例就可以访问RDS实例。
 
@@ -43,13 +43,13 @@ RDS的白名单包括如下两种类型：
 ## IP白名单注意事项
 
 -   您可以修改或清空默认的IP白名单，但是不能将其删除。
--   单个实例最多支持200个IP白名单分组。
+-   单个实例最多支持50个IP白名单分组。
 -   单个实例最多添加1000个IP或IP段，即所有IP白名单分组内的IP或IP段总和不能超过1000。当IP较多时，建议将零散的IP合并为IP段，例如10.10.10.0/24，（[CIDR模式](~~54484~~)，即无类域间路由，/24表示地址中前缀的长度，范围为1~32）。
 -   **ali\_dms\_group**（[DMS](https://www.alibabacloud.com/help/zh/doc-detail/47550.htm)产品IP地址白名单分组）、**hdm\_security\_ips**（DAS产品IP地址白名单分组）等分组为使用相关产品时系统自动生成。请勿修改或删除分组，避免影响相关产品的使用。
 
     **说明：** 请勿在这些分组里增加自己的业务IP，避免相关产品更新时覆盖掉您的业务IP，影响业务正常运行。
 
-    ![系统分组](https://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/zh-CN/3477559951/p77745.png)
+    ![系统分组](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/3477559951/p77745.png)
 
 
 ## 高安全白名单模式设置IP白名单
@@ -60,7 +60,7 @@ RDS的白名单包括如下两种类型：
 
 2.  在左侧单击**实例列表**，然后在上方选择实例所在地域。
 
-    ![选择地域](https://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/zh-CN/3074469951/p36543.png)
+    ![选择地域](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/3074469951/p36543.png)
 
 3.  找到目标实例，单击实例ID。
 
@@ -70,10 +70,10 @@ RDS的白名单包括如下两种类型：
 
     |连接场景|操作|
     |----|--|
-    |ECS实例和RDS实例在相同专有网络VPC内（推荐）|    1.  在**白名单设置**页面单击**default 专有网络**分组右侧的**修改**。
+    |ECS实例和RDS实例在相同专有网络VPC内（推荐）|    1.  在**白名单设置**页面单击**default 经典网络**分组右侧的**修改**。
     2.  在弹出的对话框中，填写ECS实例的内网IP地址，然后单击**添加**。
 
-**说明：** ECS实例上的应用程序需要使用RDS实例的内网连接地址。 |
+**说明：** ECS实例上的应用程序中使用RDS实例的内网连接地址。 |
     |ECS实例和RDS实例在不同专有网络VPC内|    1.  在RDS实例的**数据库连接**页面单击**切换为经典网络**并确定。
     2.  切换完成后单击**切换为专有网络**，选择和ECS实例相同的VPC。
 
@@ -113,7 +113,7 @@ RDS的白名单包括如下两种类型：
 **说明：**
 
         -   云外主机的应用程序中使用RDS实例的外网连接地址。
-        -   定位本地公网IP地址请参见[RDS MySQL和MariaDB白名单设置：如何确定本地设备或外部服务器的公网IP地址](/intl.zh-CN/常见问题/连接/网络/RDS MySQL和MariaDB白名单设置：如何确定本地设备或外部服务器的公网IP地址.md) |
+        -   定位本地公网IP地址请参见[外网无法连接RDS MySQL或MariaDB：如何正确填写本地设备的公网IP地址](/intl.zh-CN/常见问题/连接/网络/外网无法连接RDS MySQL或MariaDB：如何正确填写本地设备的公网IP地址.md)。 |
 
     **说明：**
 
@@ -127,7 +127,7 @@ RDS的白名单包括如下两种类型：
 
 2.  在左侧单击**实例列表**，然后在上方选择实例所在地域。
 
-    ![选择地域](https://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/zh-CN/3074469951/p36543.png)
+    ![选择地域](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/3074469951/p36543.png)
 
 3.  找到目标实例，单击实例ID。
 
@@ -135,13 +135,13 @@ RDS的白名单包括如下两种类型：
 
 5.  在**白名单设置**页签中，单击**default**白名单分组中的**修改**。
 
-    ![](https://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/zh-CN/3477559951/p1794.png)
+    ![](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/3477559951/p1794.png)
 
     **说明：** 您也可以单击**添加白名单分组**新建自定义分组。
 
 6.  在**修改白名单分组**对话框中，填写需要访问该实例的IP地址或IP段，然后单击**添加**。
 
-    ![](https://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/zh-CN/3438272061/p1795.png)
+    ![](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/3438272061/p1795.png)
 
     **说明：**
 
@@ -175,7 +175,7 @@ RDS的白名单包括如下两种类型：
 
     -   公网IP地址不固定，可能会变动。
     -   IP地址查询工具或网站查询的公网IP地址不准确。
-    解决办法请参见[RDS MySQL和MariaDB白名单设置：如何确定本地设备或外部服务器的公网IP地址](/intl.zh-CN/常见问题/连接/网络/RDS MySQL和MariaDB白名单设置：如何确定本地设备或外部服务器的公网IP地址.md)。
+    解决办法请参见[外网无法连接RDS MySQL或MariaDB：如何正确填写本地设备的公网IP地址](/intl.zh-CN/常见问题/连接/网络/外网无法连接RDS MySQL或MariaDB：如何正确填写本地设备的公网IP地址.md)。
 
 
 ## 安全组注意事项
@@ -195,7 +195,7 @@ RDS的白名单包括如下两种类型：
 
 2.  在左侧单击**实例列表**，然后在上方选择实例所在地域。
 
-    ![选择地域](https://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/zh-CN/3074469951/p36543.png)
+    ![选择地域](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/3074469951/p36543.png)
 
 3.  找到目标实例，单击实例ID。
 
@@ -222,7 +222,7 @@ RDS的白名单包括如下两种类型：
 
     如果多的分组内IP是内网IP，通常是阿里云其他产品（例如DMS、DAS）自动生成的辅助控制台某些功能的白名单，不会操作您任何业务数据。
 
-    ![hdm白名单](https://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/zh-CN/4477559951/p68936.png)
+    ![hdm白名单](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/4477559951/p68936.png)
 
 -   不开放外网访问，仅在内网访问，会有安全风险吗？
 
