--- a/intl.zh-CN/RDS SQL Server 数据库/数据安全/加密/设置白名单.md
+++ b/intl.zh-CN/RDS SQL Server 数据库/数据安全/加密/设置白名单.md
@@ -9,13 +9,13 @@ IP白名单可以让RDS实例得到高级别的访问安全保护，建议您定
 ## IP白名单注意事项
 
 -   您可以修改或清空默认的IP白名单，但是不能将其删除。
--   单个实例最多支持200个IP白名单分组。
+-   单个实例最多支持50个IP白名单分组。
 -   单个实例最多添加1000个IP或IP段，即所有IP白名单分组内的IP或IP段总和不能超过1000。当IP较多时，建议将零散的IP合并为IP段，例如10.10.10.0/24，（[CIDR模式](~~54484~~)，即无类域间路由，/24表示地址中前缀的长度，范围为1~32）。
 -   **ali\_dms\_group**（[DMS](https://www.alibabacloud.com/help/zh/doc-detail/47550.htm)产品IP地址白名单分组）、**hdm\_security\_ips**（DAS产品IP地址白名单分组）等分组为使用相关产品时系统自动生成。请勿修改或删除分组，避免影响相关产品的使用。
 
     **说明：** 请勿在这些分组里增加自己的业务IP，避免相关产品更新时覆盖掉您的业务IP，影响业务正常运行。
 
-    ![系统分组](https://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/zh-CN/3477559951/p77745.png)
+    ![系统分组](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/3477559951/p77745.png)
 
 
 ## 操作步骤
@@ -24,7 +24,7 @@ IP白名单可以让RDS实例得到高级别的访问安全保护，建议您定
 
 2.  在左侧单击**实例列表**，然后在上方选择实例所在地域。
 
-    ![选择地域](https://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/zh-CN/3074469951/p36543.png)
+    ![选择地域](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/3074469951/p36543.png)
 
 3.  找到目标实例，单击实例ID。
 
@@ -32,13 +32,13 @@ IP白名单可以让RDS实例得到高级别的访问安全保护，建议您定
 
 5.  在**白名单设置**页签中，单击**default**白名单分组中的**修改**。
 
-    ![](https://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/zh-CN/3477559951/p1794.png)
+    ![](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/3477559951/p1794.png)
 
     **说明：** 您也可以单击**添加白名单分组**新建自定义分组。
 
 6.  在**修改白名单分组**对话框中，填写需要访问该实例的IP地址或IP段，然后单击**添加**。
 
-    ![](https://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/zh-CN/3438272061/p1795.png)
+    ![](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/3438272061/p1795.png)
 
     **说明：**
 
@@ -72,7 +72,7 @@ IP白名单可以让RDS实例得到高级别的访问安全保护，建议您定
 
     如果多的分组内IP是内网IP，通常是阿里云其他产品（例如DMS、DAS）自动生成的辅助控制台某些功能的白名单，不会操作您任何业务数据。
 
-    ![hdm白名单](https://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/zh-CN/4477559951/p68936.png)
+    ![hdm白名单](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/4477559951/p68936.png)
 
 -   不开放外网访问，仅在内网访问，会有安全风险吗？
 
