--- a/cn.zh-CN/RDS MariaDB TX 数据库/账号/创建账号.md
+++ b/cn.zh-CN/RDS MariaDB TX 数据库/账号/创建账号.md
@@ -23,7 +23,7 @@ RDS MariaDB实例支持两种数据库账号：高权限账号和普通账号。
 1.  登录[RDS控制台](https://rdsnext.console.aliyun.com)。
 2.  在左侧单击**实例列表**，然后在上方选择实例所在地域。
 
-    ![选择地域](https://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/zh-CN/3074469951/p36543.png)
+    ![选择地域](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/3074469951/p36543.png)
 
 3.  找到目标实例，单击实例ID。
 4.  在左侧导航栏中选择**账号管理**。
@@ -57,7 +57,7 @@ RDS MariaDB实例支持两种数据库账号：高权限账号和普通账号。
 1.  登录[RDS控制台](https://rdsnext.console.aliyun.com)。
 2.  在左侧单击**实例列表**，然后在上方选择实例所在地域。
 
-    ![选择地域](https://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/zh-CN/3074469951/p36543.png)
+    ![选择地域](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/3074469951/p36543.png)
 
 3.  找到目标实例，单击实例ID。
 4.  在左侧导航栏中，选择**账号管理**。
@@ -69,7 +69,7 @@ RDS MariaDB实例支持两种数据库账号：高权限账号和普通账号。
 1.  登录[RDS控制台](https://rdsnext.console.aliyun.com)。
 2.  在左侧单击**实例列表**，然后在上方选择实例所在地域。
 
-    ![选择地域](https://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/zh-CN/3074469951/p36543.png)
+    ![选择地域](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/3074469951/p36543.png)
 
 3.  找到目标实例，单击实例ID。
 4.  在左侧导航栏中选择**账号管理**。
@@ -84,7 +84,7 @@ RDS MariaDB实例支持两种数据库账号：高权限账号和普通账号。
     -   以字母开头，以字母或数字结尾。
     -   由小写字母、数字或下划线组成。 |
     |**账号类型**|此处选择**普通账号**。|
-    |**授权数据库**|为该账号授予一个或多个数据库的权限。本参数可以留空，在创建账号后再给账号授权。     1.  从左侧选中一个或多个数据库，单击**授权**添加到右侧。
+    |**授权数据库**|为该账号授予一个或多个数据库的权限。本参数可以留空，在创建账号后再给账号授权。     1.  从左侧选中一个或多个数据库，单击**\>**添加到右侧。
     2.  在右侧框中，为某个数据库选择**读写**、**只读**、**仅DDL**或**仅DML**。
 
 如果要为多个数据库批量设置相同的权限，则单击右侧框里右上角的按钮，如**全部设读写**。
