--- a/intl.zh-CN/RDS MySQL 数据库/备份/异地备份与即时查询.md
+++ b/intl.zh-CN/RDS MySQL 数据库/备份/异地备份与即时查询.md
@@ -24,7 +24,7 @@
 
 ## 技术架构
 
-![](https://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/zh-CN/8213729951/p58448.png)
+![](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/8213729951/p58448.png)
 
 ## 注意事项
 
@@ -42,11 +42,11 @@
     3.  在页面左上角，选择备份计划所在地域。
     4.  单击目标备份计划右侧的**配置备份计划**。
 
-        ![](https://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/zh-CN/8213729951/p58470.png)
+        ![](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/8213729951/p58470.png)
 
     5.  配置**备份源信息**和**备份目标信息**。
 
-        ![](https://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/zh-CN/8213729951/p58472.png)
+        ![](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/8213729951/p58472.png)
 
         |类别|配置|说明|
         |--|--|--|
@@ -97,12 +97,12 @@
 
         **说明：** 单击**确定**后DLA会自动创建该备份集的Schema。
 
-        ![](https://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/zh-CN/8213729951/p58495.png)
+        ![](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/8213729951/p58495.png)
 
 4.  查询DBS全备数据。
 
     1.  登录[DLA控制台](https://datalakeanalytics.console.aliyun.com/overview)。
-    2.  在左侧导航栏选择**Serverless** \> **SQL访问点**。
+    2.  在左侧导航栏选择**Serverless SQL** \> **SQL访问点**。
     3.  在**SQL访问点**页面，单击**登录到DMS**。
     4.  填写登录信息后单击**登录**。
 
