--- a/cn.zh-CN/RDS PostgreSQL 数据库/实例/变更配置.md
+++ b/cn.zh-CN/RDS PostgreSQL 数据库/实例/变更配置.md
@@ -6,10 +6,11 @@
 
 ## 变更项
 
-如您需要横向扩展数据库的读取能力，请参见[PostgreSQL只读实例简介](/cn.zh-CN/RDS PostgreSQL 数据库/快速入门/只读实例/PostgreSQL只读实例简介.md)和[创建PostgreSQL只读实例](/cn.zh-CN/RDS PostgreSQL 数据库/快速入门/只读实例/创建PostgreSQL只读实例.md)，通过只读实例来分担主实例的压力。
+如您需要横向扩展数据库的读取能力，请参见[PostgreSQL只读实例简介](/cn.zh-CN/RDS PostgreSQL 数据库/只读实例/PostgreSQL只读实例简介.md)和[创建PostgreSQL只读实例](/cn.zh-CN/RDS PostgreSQL 数据库/只读实例/创建PostgreSQL只读实例.md)，通过只读实例来分担主实例的压力。
 
 |变更项|说明|
 |---|--|
+|系列|支持[PostgreSQL基础版升级高可用版](/cn.zh-CN/RDS PostgreSQL 数据库/升级版本/PostgreSQL基础版升级高可用版.md)。|
 |规格|所有实例类型都支持变更规格。 |
 |存储空间|所有实例都支持增加存储空间。
 
@@ -31,7 +32,7 @@
 
 -   变更配置可能会进行数据迁移，迁移完成后根据您选择的切换时间进行切换（期间保持增量同步），切换过程中会出现一次约30秒的闪断，而且与数据库、账号、网络等相关的大部分操作都无法执行，请尽量在业务低峰期执行变配操作，或确保您的应用有自动重连机制。
 
-    **说明：** 云盘实例增加存储空间不会闪断。
+    **说明：** ESSD云盘实例增加存储空间不会闪断。
 
 -   变更配置后无需您手动重启实例。
 -   由于基础版只有一个数据库节点，没有备节点作为热备份，因此当该节点意外宕机或者执行变更配置、版本升级等任务时，会出现较长时间的不可用。如果业务对数据库的可用性要求较高，不建议使用基础版，可选择其他系列（如高可用版）。
@@ -44,13 +45,13 @@
 
 2.  在左侧单击**实例列表**，然后在上方选择实例所在地域。
 
-    ![选择地域](https://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/zh-CN/3074469951/p36543.png)
+    ![选择地域](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/3074469951/p36543.png)
 
 3.  找到目标实例，单击实例ID。
 
 4.  单击**变更配置**。
 
-    ![](https://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/zh-CN/8867559951/p11174.png)
+    ![](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/8867559951/p11174.png)
 
 5.  （仅包年包月实例需要执行此步骤）在弹出的对话框中，选择变更方式，单击**下一步**。
 
@@ -66,7 +67,7 @@
 
     变更任务下达后，系统将磁盘数据同步到一个新实例，然后根据**立即升降配**或**续费时升降配**确定时间，到时间后系统将老实例的实例ID和连接地址等信息切换到新实例。
 
-    ![](https://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/zh-CN/9867559951/p7047.png)
+    ![](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/9867559951/p7047.png)
 
 6.  修改实例的配置。详情请参见[变更项](#section_zlk_qvz_z2b)。
 
@@ -82,11 +83,11 @@
 1.  登录[PostgreSQL临时控制台](https://postgresql.console.aliyun.com/)。
 2.  在页面左上角，选择实例所在地域。
 
-    ![](https://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/zh-CN/5777559951/p49697.png)
+    ![](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/5777559951/p49697.png)
 
 3.  找到目标实例，选择右侧**⋮** \> **变配**。
 
-    ![](https://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/zh-CN/9867559951/p49713.png)
+    ![](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/9867559951/p49713.png)
 
 4.  修改**数据库规格**和**存储空间**。
 5.  勾选服务协议，单击**去开通**并完成支付。
