--- a/cn.zh-CN/活动与通知/新功能发布记录.md
+++ b/cn.zh-CN/活动与通知/新功能发布记录.md
@@ -6,6 +6,7 @@
 
 |引擎|功能名称|功能描述|发布时间|相关文档|
 |--|----|----|----|----|
+|PostgreSQL|基础版升级高可用版|RDS PostgreSQL的基础版实例可以升级为高可用版，获得更高可靠性。|2020-11-25|[PostgreSQL基础版升级高可用版](/cn.zh-CN/RDS PostgreSQL 数据库/升级版本/PostgreSQL基础版升级高可用版.md)|
 |PostgreSQL|AliPG|PostgreSQL内核AliPG更新至20201130版本。|2020-11-16|[AliPG 小版本 Release Nostes](/cn.zh-CN/自研内核 AliPG/AliPG 小版本 Release Nostes.md)|
 |PostgreSQL|时空数据库|时空数据库Ganos升级至3.2版本。|2020-11-16|[时空数据库 Release Notes](/cn.zh-CN/时空数据库/时空数据库 Release Notes.md)|
 
