--- a/cn.zh-CN/API 参考/备份/查询备份任务.md
+++ b/cn.zh-CN/API 参考/备份/查询备份任务.md
@@ -52,7 +52,9 @@
 -   **Waiting**：等待备份
 -   **Uploading**：上传备份
 -   **Finished**：完成备份
--   **Failed**：备份失败 |
+-   **Failed**：备份失败
+
+ **说明：** 有任务执行时才会返回本参数。 |
 |JobMode|String|Automated|备份模式，取值：
 
  -   **Automated**：系统自动备份
