--- a/cn.zh-CN/云数据库 RDS 简介/产品系列/高可用版.md
+++ b/cn.zh-CN/云数据库 RDS 简介/产品系列/高可用版.md
@@ -4,11 +4,13 @@
 
 高可用版是适用性较广的云数据库系列。采用一主一备的经典高可用架构，适合80%以上的用户场景，包括互联网、物联网、零售电商、物流、游戏等行业。
 
-![](https://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/zh-CN/0480268951/p54376.png)
+![](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/0480268951/p54376.png)
+
+**说明：** 高可用版在极端情况下可能丢失数据，若您需要数据100%安全，恢复点目标（RPO）=0，建议您使用[三节点企业版](/cn.zh-CN/云数据库 RDS 简介/产品系列/三节点企业版.md)。
 
 ## 拓扑图
 
-![](https://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/zh-CN/0480268951/p53963.png)
+![](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/0480268951/p53963.png)
 
 ## 优势
 
