--- a/intl.zh-CN/RDS MySQL 数据库/变更实例/修改数据复制方式.md
+++ b/intl.zh-CN/RDS MySQL 数据库/变更实例/修改数据复制方式.md
@@ -35,7 +35,7 @@
 |MySQL 8.0|三节点企业版|强同步|
 |高可用版|-   半同步
 -   异步 |
-|MySQL 5.7|三节点企业版|半同步|
+|MySQL 5.7|三节点企业版|强同步|
 |高可用版|-   半同步
 -   异步 |
 |MySQL 5.6|三节点企业版|强同步|
