--- a/intl.zh-CN/云数据库 RDS 简介/产品系列/高可用版.md
+++ b/intl.zh-CN/云数据库 RDS 简介/产品系列/高可用版.md
@@ -16,7 +16,7 @@
 
 高可用性
 
-高可用版实例有一个备实例，主备实例的数据会实时同步，当主实例出现故障无法访问时，会自动切换到备用实例。
+高可用版实例有一个备实例，主实例的数据会通过半同步的方式同步到备实例，当主实例出现故障无法访问时，会自动切换到备用实例。
 
 高可用版实例的主备实例可以部署在同一可用区，也可以部署在不同可用区。
 
