--- a/cn.zh-CN/RDS MySQL 数据库/快速入门/设置白名单.md
+++ b/cn.zh-CN/RDS MySQL 数据库/快速入门/设置白名单.md
@@ -43,7 +43,7 @@ RDS的白名单包括如下两种类型：
 ## IP白名单注意事项
 
 -   您可以修改或清空默认的IP白名单，但是不能将其删除。
--   单个实例最多支持200个IP白名单分组。
+-   单个实例最多支持50个IP白名单分组。
 -   单个实例最多添加1000个IP或IP段，即所有IP白名单分组内的IP或IP段总和不能超过1000。当IP较多时，建议将零散的IP合并为IP段，例如10.10.10.0/24，（[CIDR模式](~~54484~~)，即无类域间路由，/24表示地址中前缀的长度，范围为1~32）。
 -   **ali\_dms\_group**（[DMS](https://help.aliyun.com/document_detail/47550.html)产品IP地址白名单分组）、**hdm\_security\_ips**（[DAS](https://help.aliyun.com/document_detail/64851.html)产品IP地址白名单分组）等分组为使用相关产品时系统自动生成。请勿修改或删除分组，避免影响相关产品的使用。
 
@@ -52,32 +52,20 @@ RDS的白名单包括如下两种类型：
     ![系统分组](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/3477559951/p77745.png)
 
 
-## 通用白名单模式设置IP白名单（新版控制台）
+## 通用白名单模式设置IP白名单
 
-1.  登录[RDS管理控制台](https://rds.console.aliyun.com/)。
-
-2.  在左侧单击**实例列表**，然后在上方选择实例所在地域。
-
-    ![选择地域](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/3074469951/p36543.png)
-
-3.  找到目标实例，单击实例ID。
-
-4.  在左侧导航栏中单击**数据安全性**。
-
-5.  在**白名单设置**页签中，单击**default**白名单分组中的**修改**。
+1.  在**白名单设置**页签中，单击**default**白名单分组中的**修改**。
 
     **说明：** 您也可以单击**添加白名单分组**新建自定义分组。
 
-6.  在**修改白名单分组**对话框中，填写需要访问该实例的IP地址或IP段，然后单击**确定**。
+2.  在**修改白名单分组**对话框中，填写需要访问该实例的IP地址或IP段，然后单击**确定**。
 
     **说明：**
 
     -   若您需要添加多个IP地址或IP段，请用英文逗号隔开（逗号前后都不能有空格），例如`192.168.0.1,172.16.213.9`。
     -   单击**加载ECS内网IP**后，将显示您当前阿里云账号下所有ECS实例的IP地址，可快速添加ECS内网IP地址到白名单中。
 
-## 高安全白名单模式设置IP白名单（新版控制台）
-
-**说明：** 云数据库RDS已提供新版控制台，建议您在**实例列表**页面上方进行切换。
+## 高安全白名单模式设置IP白名单
 
 仅本地SSD盘实例支持高安全白名单模式，如果实例已经是高安全白名单模式，参见下文进行设置即可。如果需要切换为高安全白名单模式，请参见[切换为高安全白名单模式](/cn.zh-CN/RDS MySQL 数据库/数据安全/加密/切换为高安全白名单模式.md)。
 
@@ -96,7 +84,7 @@ RDS的白名单包括如下两种类型：
     |连接场景|操作|
     |----|--|
     |ECS实例和RDS实例在相同专有网络VPC内（推荐）|    1.  在**白名单设置**页面单击**default 经典网络**分组右侧的**修改**。
-    2.  在弹出的对话框中，填写ECS实例的内网IP地址，然后单击**确定**。
+    2.  在弹出的对话框中，填写ECS实例的内网IP地址。
 
 **说明：** ECS实例上的应用程序中使用RDS实例的内网连接地址。 |
     |ECS实例和RDS实例在不同专有网络VPC内|    1.  在RDS实例的**数据库连接**页面单击**切换为经典网络**并确定。
@@ -105,11 +93,11 @@ RDS的白名单包括如下两种类型：
 **说明：** ECS实例和RDS实例需要处于相同地域才能切换到相同VPC。如果地域不同，为业务稳定，建议您通过DTS将RDS实例迁移至ECS实例所属地域。详情请参见[RDS实例间数据迁移](/cn.zh-CN/RDS MySQL 数据库/数据迁移/RDS实例间数据迁移.md)。
 
     3.  在RDS实例的**白名单设置**页面单击**default 专有网络**分组右侧的**修改**。
-    4.  在弹出的对话框中，填写ECS实例的内网IP地址，然后单击**确定**。
+    4.  在弹出的对话框中，填写ECS实例的内网IP地址。
 
 **说明：** 应用程序中使用RDS实例的内网连接地址。 |
     |ECS实例和RDS实例均为经典网络|    1.  在**白名单设置**页面单击**default 经典网络**分组右侧的**修改**。
-    2.  在弹出的对话框中，填写ECS实例的内网IP地址，然后单击**确定**。
+    2.  在弹出的对话框中，填写ECS实例的内网IP地址。
 
 **说明：** ECS实例上的应用程序中使用RDS实例的内网连接地址。 |
     |ECS实例为经典网络 RDS实例为专有网络
@@ -119,7 +107,7 @@ RDS的白名单包括如下两种类型：
 **说明：** ECS实例和RDS实例需要处于相同地域才能切换到相同VPC。如果地域不同，为业务稳定，建议您通过DTS将RDS实例迁移至ECS实例所属地域。详情请参见[RDS实例间数据迁移](/cn.zh-CN/RDS MySQL 数据库/数据迁移/RDS实例间数据迁移.md)。
 
     2.  在RDS实例的**白名单设置**页面单击**default 专有网络**分组右侧的**修改**。
-    3.  在弹出的对话框中，填写ECS实例的内网IP地址，然后单击**确定**。
+    3.  在弹出的对话框中，填写ECS实例的内网IP地址。
 
 **说明：** 应用程序中使用RDS实例的内网连接地址。 |
     |ECS实例为专有网络 RDS实例为经典网络
@@ -129,11 +117,11 @@ RDS的白名单包括如下两种类型：
 **说明：** ECS实例和RDS实例需要处于相同地域才能切换到相同VPC。如果地域不同，为业务稳定，建议您通过DTS将RDS实例迁移至ECS实例所属地域。详情请参见[RDS实例间数据迁移](/cn.zh-CN/RDS MySQL 数据库/数据迁移/RDS实例间数据迁移.md)。
 
     2.  在RDS实例的**白名单设置**页面单击**default 专有网络**分组右侧的**修改**。
-    3.  在弹出的对话框中，填写ECS实例的内网IP地址，然后单击**确定**。
+    3.  在弹出的对话框中，填写ECS实例的内网IP地址。
 
 **说明：** 应用程序中使用RDS实例的内网连接地址。 |
     |云外主机连接RDS实例|    1.  在**白名单设置**页面单击**default 经典网络**分组右侧的**修改**。
-    2.  在弹出的对话框中，填写云外主机的公网IP地址，然后单击**确定**。
+    2.  在弹出的对话框中，填写云外主机的公网IP地址。
 
 **说明：**
 
@@ -144,103 +132,6 @@ RDS的白名单包括如下两种类型：
 
     -   您可以单击**添加白名单分组**新建自定义分组，根据连接类型选择**专有网络**或**经典网络 及 外网地址**。
     -   若您需要添加多个IP地址或IP段，请用英文逗号（,）隔开，例如`192.168.0.1,172.16.213.9`。
-    -   单击**加载ECS内网IP**后，将显示您当前阿里云账号下所有ECS实例的IP地址，可快速添加ECS内网IP地址到白名单中。
-
-## 高安全白名单模式设置IP白名单（旧版控制台）
-
-**说明：** 仅本地SSD盘实例支持高安全白名单模式，如果实例已经是高安全白名单模式，参见下文进行设置即可。如果需要切换为高安全白名单模式，请参见[切换为高安全白名单模式](/cn.zh-CN/RDS MySQL 数据库/数据安全/加密/切换为高安全白名单模式.md)。
-
-1.  登录[RDS管理控制台](https://rds.console.aliyun.com/)。
-
-2.  在左侧单击**实例列表**，然后在上方选择实例所在地域。
-
-    ![选择地域](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/3074469951/p36543.png)
-
-3.  找到目标实例，单击实例ID。
-
-4.  在左侧导航栏中单击**数据安全性**。
-
-5.  根据以下连接场景进行后续操作。
-
-    |连接场景|操作|
-    |----|--|
-    |ECS实例和RDS实例在相同专有网络VPC内（推荐）|    1.  在**白名单设置**页面单击**default 经典网络**分组右侧的**修改**。
-    2.  在弹出的对话框中，填写ECS实例的内网IP地址，然后单击**添加**。
-
-**说明：** ECS实例上的应用程序中使用RDS实例的内网连接地址。 |
-    |ECS实例和RDS实例在不同专有网络VPC内|    1.  在RDS实例的**数据库连接**页面单击**切换为经典网络**并确定。
-    2.  切换完成后单击**切换为专有网络**，选择和ECS实例相同的VPC。
-
-**说明：** ECS实例和RDS实例需要处于相同地域才能切换到相同VPC。如果地域不同，为业务稳定，建议您通过DTS将RDS实例迁移至ECS实例所属地域。详情请参见[RDS实例间数据迁移](/cn.zh-CN/RDS MySQL 数据库/数据迁移/RDS实例间数据迁移.md)。
-
-    3.  在RDS实例的**白名单设置**页面单击**default 专有网络**分组右侧的**修改**。
-    4.  在弹出的对话框中，填写ECS实例的内网IP地址，然后单击**添加**。
-
-**说明：** 应用程序中使用RDS实例的内网连接地址。 |
-    |ECS实例和RDS实例均为经典网络|    1.  在**白名单设置**页面单击**default 经典网络**分组右侧的**修改**。
-    2.  在弹出的对话框中，填写ECS实例的内网IP地址，然后单击**添加**。
-
-**说明：** ECS实例上的应用程序中使用RDS实例的内网连接地址。 |
-    |ECS实例为经典网络 RDS实例为专有网络
-
-|    1.  将ECS实例迁移至RDS实例所属的专有网络中，详情请参见[ECS实例迁移](https://help.aliyun.com/document_detail/57954.html)。
-
-**说明：** ECS实例和RDS实例需要处于相同地域才能切换到相同VPC。如果地域不同，为业务稳定，建议您通过DTS将RDS实例迁移至ECS实例所属地域。详情请参见[RDS实例间数据迁移](/cn.zh-CN/RDS MySQL 数据库/数据迁移/RDS实例间数据迁移.md)。
-
-    2.  在RDS实例的**白名单设置**页面单击**default 专有网络**分组右侧的**修改**。
-    3.  在弹出的对话框中，填写ECS实例的内网IP地址，然后单击**添加**。
-
-**说明：** 应用程序中使用RDS实例的内网连接地址。 |
-    |ECS实例为专有网络 RDS实例为经典网络
-
-|    1.  在RDS实例的**数据库连接**页面单击**切换为专有网络**，选择和ECS实例相同的VPC。
-
-**说明：** ECS实例和RDS实例需要处于相同地域才能切换到相同VPC。如果地域不同，为业务稳定，建议您通过DTS将RDS实例迁移至ECS实例所属地域。详情请参见[RDS实例间数据迁移](/cn.zh-CN/RDS MySQL 数据库/数据迁移/RDS实例间数据迁移.md)。
-
-    2.  在RDS实例的**白名单设置**页面单击**default 专有网络**分组右侧的**修改**。
-    3.  在弹出的对话框中，填写ECS实例的内网IP地址，然后单击**添加**。
-
-**说明：** 应用程序中使用RDS实例的内网连接地址。 |
-    |云外主机连接RDS实例|    1.  在**白名单设置**页面单击**default 经典网络**分组右侧的**修改**。
-    2.  在弹出的对话框中，填写云外主机的公网IP地址，然后单击**添加**。
-
-**说明：**
-
-        -   云外主机的应用程序中使用RDS实例的外网连接地址。
-        -   定位本地公网IP地址请参见[外网无法连接RDS MySQL或MariaDB：如何正确填写本地设备的公网IP地址](/cn.zh-CN/常见问题/连接/网络/外网无法连接RDS MySQL或MariaDB：如何正确填写本地设备的公网IP地址.md)。 |
-
-    **说明：**
-
-    -   您可以单击**添加白名单分组**新建自定义分组，根据连接类型选择**专有网络**或**经典网络 及 外网地址**。
-    -   若您需要添加多个IP地址或IP段，请用英文逗号（,）隔开，例如`192.168.0.1,172.16.213.9`。
-    -   单击**加载ECS内网IP**后，将显示您当前阿里云账号下所有ECS实例的IP地址，可快速添加ECS内网IP地址到白名单中。
-
-## 通用白名单模式设置IP白名单（旧版控制台）
-
-1.  登录[RDS管理控制台](https://rds.console.aliyun.com/)。
-
-2.  在左侧单击**实例列表**，然后在上方选择实例所在地域。
-
-    ![选择地域](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/3074469951/p36543.png)
-
-3.  找到目标实例，单击实例ID。
-
-4.  在左侧导航栏中单击**数据安全性**。
-
-5.  在**白名单设置**页签中，单击**default**白名单分组中的**修改**。
-
-    ![](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/3477559951/p1794.png)
-
-    **说明：** 您也可以单击**添加白名单分组**新建自定义分组。
-
-6.  在**修改白名单分组**对话框中，填写需要访问该实例的IP地址或IP段，然后单击**添加**。
-
-    ![](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/3438272061/p1795.png)
-
-    **说明：**
-
-    -   当您在**default**分组中添加新的IP地址或IP段后，系统自动删除默认地址127.0.0.1。
-    -   若您需要添加多个IP地址或IP段，请用英文逗号隔开（逗号前后都不能有空格），例如`192.168.0.1,172.16.213.9`。
     -   单击**加载ECS内网IP**后，将显示您当前阿里云账号下所有ECS实例的IP地址，可快速添加ECS内网IP地址到白名单中。
 
 ## IP白名单常见错误案例
@@ -285,19 +176,9 @@ RDS的白名单包括如下两种类型：
 
 ## 设置安全组
 
-1.  登录[RDS管理控制台](https://rds.console.aliyun.com/)。
+1.  在**白名单设置**页签内，单击**添加安全组**。
 
-2.  在左侧单击**实例列表**，然后在上方选择实例所在地域。
-
-    ![选择地域](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/3074469951/p36543.png)
-
-3.  找到目标实例，单击实例ID。
-
-4.  在左侧导航栏中单击**数据安全性**。
-
-5.  在**白名单设置**页签内，单击**添加安全组**。
-
-6.  选中要添加的安全组，单击**添加**。
+2.  选中要添加的安全组，单击**添加**。
 
     **说明：** 带有VPC标识的安全组为专有网络中的安全组。
 
