--- a/cn.zh-CN/RDS MySQL 数据库/变更实例/按量付费转包年包月.md
+++ b/cn.zh-CN/RDS MySQL 数据库/变更实例/按量付费转包年包月.md
@@ -18,20 +18,26 @@
 
 ## 操作步骤
 
-1.  找到目标实例，通过以下两种方式均可进入**按量付费转包年包月**页面：
+1.  登录[RDS管理控制台](https://rds.console.aliyun.com/)。
+
+2.  在左侧单击**实例列表**，然后在上方选择实例所在地域。
+
+    ![选择地域](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/3074469951/p36543.png)
+
+3.  找到目标实例，通过以下两种方式均可进入**按量付费转包年包月**页面：
 
     -   在目标实例右侧**操作**列中单击**转包年包月**。
     -   单击实例的ID，在**运行状态**栏中，单击**转包年包月**。
 
         ![](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/7767559951/p3011.png)
 
-2.  选择**购买时长**并勾选服务协议。
+4.  选择**购买时长**并勾选服务协议。
 
-3.  单击**去支付**。
+5.  单击**去支付**。
 
     **说明：** 此时系统会生成一个转包年包月的订单。若该订单未支付或作废，将导致您无法进行新购实例或转包年包月的操作。您可以在[订单管理](https://expense.console.aliyun.com/#/order/list/)页面支付或作废该订单。
 
-4.  按照提示支付订单。
+6.  按照提示支付订单。
 
 
 ## 相关API
