--- a/cn.zh-CN/RDS MySQL 数据库/变更实例/包年包月转按量付费.md
+++ b/cn.zh-CN/RDS MySQL 数据库/变更实例/包年包月转按量付费.md
@@ -19,11 +19,19 @@
 
 ## 操作步骤
 
-1.  在**基本信息**页面右侧单击**转按量付费**。
+1.  登录[RDS管理控制台](https://rds.console.aliyun.com/)。
+
+2.  在左侧单击**实例列表**，然后在上方选择实例所在地域。
+
+    ![选择地域](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/3074469951/p36543.png)
+
+3.  找到目标实例，单击实例ID。
+
+4.  在**基本信息**页面右侧单击**转按量付费**。
 
     ![转按量付费](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/8767559951/p96210.png)
 
-2.  确认实例信息后勾选服务协议，单击**去支付**完成支付即可。
+5.  确认实例信息后勾选服务协议，单击**去支付**完成支付即可。
 
 
 ## 相关API
