--- a/cn.zh-CN/RDS PostgreSQL 数据库/数据安全/加密/设置数据加密.md
+++ b/cn.zh-CN/RDS PostgreSQL 数据库/数据安全/加密/设置数据加密.md
@@ -32,7 +32,7 @@ RDS PostgreSQL提供数据加密功能，包括SSL链路加密和云盘加密，
 
 2.  在页面左上角，选择实例所在地域。
 
-    ![选择地域](https://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/zh-CN/3074469951/p36543.png)
+    ![选择地域](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/3074469951/p36543.png)
 
 3.  找到目标实例，单击实例ID。
 
@@ -40,13 +40,13 @@ RDS PostgreSQL提供数据加密功能，包括SSL链路加密和云盘加密，
 
 5.  搜索参数**ssl**，修改值为**on**并单击**确定**。
 
-    ![修改ssl](https://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/zh-CN/5477559951/p67643.png)
+    ![修改ssl](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/5477559951/p67643.png)
 
     **说明：**
 
     -   开启SSL后，客户端登录时请设置SSL模式为**Prefer**。
 
-        ![SSLMODE](https://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/zh-CN/5477559951/p74979.png)
+        ![SSLMODE](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/5477559951/p74979.png)
 
     -   需要关闭时将参数**ssl**修改为**off**即可。
 
@@ -60,7 +60,7 @@ RDS PostgreSQL提供数据加密功能，包括SSL链路加密和云盘加密，
 
 2.  左上角选择将要创建实例的地域。
 
-    ![](https://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/zh-CN/5477559951/p55767.png)
+    ![](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/5477559951/p55767.png)
 
 3.  单击**创建密钥**。
 
@@ -79,7 +79,7 @@ RDS PostgreSQL提供数据加密功能，包括SSL链路加密和云盘加密，
 **说明：** Aliyun\_SM4或EC\_SM2的密钥类型，仅在中国内地使用托管密码机的地域支持。 |
     |**密钥用途**|    -   Encrypt/Decrypt：数据加密和解密。
     -   Sign/Verify：产生和验证数字签名。 |
-    |**别名**|用户主密钥的可选标识，详情请参见[别名使用说明](/cn.zh-CN/用户指南/别名使用说明.md)。|
+    |**别名**|用户主密钥的可选标识，详情请参见[别名概述](/cn.zh-CN/密钥服务/管理别名/别名概述.md)。|
     |**保护级别**|    -   Software：通过软件模块对密钥进行保护。
     -   Hsm：将密钥托管在密码机中，使密钥获得高安全等级的专用硬件的保护。 |
     |**描述**|密钥的说明信息。|
@@ -91,24 +91,22 @@ RDS PostgreSQL提供数据加密功能，包括SSL链路加密和云盘加密，
     -   自定义：7~730天。
 **说明：** 仅密钥类型为Aliyun\_AES\_256和Aliyun\_SM4的对称密钥支持设置轮转周期。 |
 
-    ![](https://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/zh-CN/3551703061/p55744.png)
+    ![](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/3551703061/p55744.png)
 
 5.  单击**确定**。
 
-6.  （仅第一次使用需要授权）单击[云资源访问授权](https://ram.console.aliyun.com/#/role/authorize?request=%7B%22Requests%22%3A%20%7B%22request1%22%3A%20%7B%22RoleName%22%3A%20%22AliyunPostgreSQLInstanceEncryptionRole%22%2C%20%22TemplateId%22%3A%20%22PostgreSQLInstanceEncryptionRole%22%7D%7D%2C%20%22ReturnUrl%22%3A%20%22https%3A//postgresql.console.aliyun.com%22%2C%20%22Service%22%3A%20%22PostgreSQL%22%7D)，单击**同意授权**让PostgreSQL可以访问您的云资源。
+6.  （仅第一次使用需要授权）单击[云资源访问授权](https://ram.console.aliyun.com/role/authorization?request=%7B%22Services%22%3A%5B%7B%22Service%22%3A%22PostgreSQL%22%2C%22Roles%22%3A%5B%7B%22RoleName%22%3A%22AliyunRDSInstanceEncryptionDefaultRole%22%2C%22TemplateId%22%3A%22PostgreSQLInstanceEncryptionRole%22%7D%5D%7D%5D%2C%22ReturnUrl%22%3A%22https%3A%2F%2Fpostgresql.console.aliyun.com%22%7D)，单击**同意授权**让PostgreSQL可以访问您的云资源。
 
-    ![](https://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/zh-CN/5477559951/p55746.png)
+    ![](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/3905607061/p55746.png)
 
-    **说明：** 仅第一次使用需要授权，您可以在[访问控制RAM控制台](https://ram.console.aliyun.com/roles)的角色管理页面查看是否具有**AliyunPostgreSQLInstanceEncryptionRole**权限。
-
-    ![](https://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/zh-CN/5477559951/p55749.png)
+    **说明：** 仅第一次使用需要授权，您可以在[访问控制RAM控制台](https://ram.console.aliyun.com/roles)查看是否具有**AliyunRDSInstanceEncryptionDefaultRole**权限。
 
 7.  接下来您可以在创建实例时选择云盘加密，详情请参见[创建RDS PostgreSQL实例](/cn.zh-CN/RDS PostgreSQL 数据库/快速入门/创建RDS PostgreSQL实例.md)。
 
-    ![](https://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/zh-CN/5477559951/p55750.png)
+    ![](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/5477559951/p55750.png)
 
     **说明：** 创建实例后您可以在实例基本信息页面查看到云盘加密的密钥。
 
-    ![](https://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/zh-CN/5477559951/p72793.png)
+    ![](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/5477559951/p72793.png)
 
 
