--- a/cn.zh-CN/RDS MySQL 数据库/变更实例/按量付费转包年包月.md
+++ b/cn.zh-CN/RDS MySQL 数据库/变更实例/按量付费转包年包月.md
@@ -26,11 +26,8 @@
 
 3.  找到目标实例，通过以下两种方式均可进入**按量付费转包年包月**页面：
 
-    -   在目标实例右侧**操作**列中单击**转包年包月**。
-    -   单击实例的ID，在**运行状态**栏中，单击**转包年包月**。
-
-        ![](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/7767559951/p3011.png)
-
+    -   在目标实例右侧**付费类型**列（新版控制台）或**操作**列（旧版控制台）中单击**转包年包月**。
+    -   单击实例的ID，然后在**运行状态**区域单击**转包年包月**。
 4.  选择**购买时长**并勾选服务协议。
 
 5.  单击**去支付**。
