--- a/cn.zh-CN/RDS MySQL 数据库/变更实例/迁移可用区.md
+++ b/cn.zh-CN/RDS MySQL 数据库/变更实例/迁移可用区.md
@@ -45,9 +45,7 @@
 
 3.  找到目标实例，单击实例ID。
 
-4.  单击**迁移可用区**。
-
-    ![](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/9967559951/p3015.png)
+4.  在**基本信息**区域单击**迁移可用区**。
 
 5.  在弹出的对话框中，选择目标主可用区、主可用区交换机和切换时间，然后单击**确定**。
 
@@ -57,7 +55,7 @@
 
     -   切换时会发生一次约30秒的闪断。请确保应用具有自动重连机制。若应用没有自动重连机制，需手动重连。
     -   由于客户端DNS缓存可能没有及时刷新，部分流量可能在10分钟后才进行切换，导致第二次闪断。
-    ![迁移可用区](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/9967559951/p134221.png)
+    ![迁移可用区](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/6956317061/p134221.png)
 
 
 ## 相关API
