--- a/intl.zh-CN/RDS MySQL 数据库/账号/账号权限/修改账号权限.md
+++ b/intl.zh-CN/RDS MySQL 数据库/账号/账号权限/修改账号权限.md
@@ -10,15 +10,13 @@
 
 2.  在左侧单击**实例列表**，然后在上方选择实例所在地域。
 
-    ![选择地域](https://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/zh-CN/3074469951/p36543.png)
+    ![选择地域](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/3074469951/p36543.png)
 
 3.  找到目标实例，单击实例ID。
 
 4.  在左侧导航栏中选择**账号管理**。
 
 5.  找到要修改权限的账号，单击**修改权限**。
-
-    ![](https://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/zh-CN/5023729951/p4167.png)
 
 6.  在**更改账号权限**页面，调整账号权限。
 
@@ -27,7 +25,7 @@
 
         **说明：** 如果需要更细粒度的权限，请使用SQL命令进行权限变更，关于权限的详细说明请参见[账号权限列表](/intl.zh-CN/RDS MySQL 数据库/账号/账号权限/账号权限列表.md)。
 
-        ![](https://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/zh-CN/5023729951/p4168.png)
+        ![](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/5023729951/p4168.png)
 
 7.  单击**确定**。
 
