--- a/intl.zh-CN/RDS MySQL 数据库/监控与报警/设置报警规则.md
+++ b/intl.zh-CN/RDS MySQL 数据库/监控与报警/设置报警规则.md
@@ -19,7 +19,7 @@
 
 2.  在左侧单击**实例列表**，然后在上方选择实例所在地域。
 
-    ![选择地域](https://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/zh-CN/3074469951/p36543.png)
+    ![选择地域](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/3074469951/p36543.png)
 
 3.  找到目标实例，单击实例ID。
 
@@ -27,9 +27,9 @@
 
 5.  选择**报警**页面。
 
-6.  单击**报警规则设置**，进入云监控控制台。
+6.  在右侧单击**报警规则设置**，进入云监控控制台。
 
-    ![报警规则设置](https://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/zh-CN/6377559951/p95893.png)
+    ![报警规则设置](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/3136037061/p95893.png)
 
 7.  创建报警联系组，详情请参见[创建报警联系人或报警联系组](/intl.zh-CN/报警服务/报警联系人/创建报警联系人或报警联系组.md)。
 
@@ -44,7 +44,7 @@
 
 2.  在左侧单击**实例列表**，然后在上方选择实例所在地域。
 
-    ![选择地域](https://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/zh-CN/3074469951/p36543.png)
+    ![选择地域](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/3074469951/p36543.png)
 
 3.  找到目标实例，单击实例ID。
 
@@ -54,13 +54,13 @@
 
 6.  单击**报警规则设置**，进入云监控控制台。
 
-    ![报警规则设置](https://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/zh-CN/6377559951/p95893.png)
+    ![报警规则设置](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/3136037061/p95893.png)
 
 7.  在**报警规则**页签找到目标规则，在右侧选择需要进行的操作，详细介绍如下：
 
     -   查看：查看详细的报警规则。
     -   报警历史：查看某时间段的报警历史。
-    -   修改：修改告警规则，详细参数说明请参见[报警规则参数说明](/intl.zh-CN/报警服务/报警规则/报警规则参数说明.md)。
+    -   修改：修改告警规则，详细参数说明请参见[报警规则参数说明]()。
     -   禁用：禁用选择的告警规则。当监控数据满足条件时，不会触发报警。
     -   删除：将选择的告警规则删除。删除后无法恢复，只能重新添加。
 
