--- a/cn.zh-CN/RDS MySQL 数据库/升级版本/高可用版升级为三节点企业版.md
+++ b/cn.zh-CN/RDS MySQL 数据库/升级版本/高可用版升级为三节点企业版.md
@@ -10,7 +10,9 @@
 
     **说明：** 您可以在**基本信息**页面的**配置信息**区域查看是否有**升级内核小版本**按钮。如果有按钮，请单击按钮查看当前版本是否为**rds\_20200110**（请勿升级内核版本）；如果没有按钮，表示内核已经是最新版，不支持升级，您可以购买三节点企业版实例，然后使用[数据传输服务](/cn.zh-CN/RDS MySQL 数据库/数据迁移/RDS实例间数据迁移.md)迁移数据。
 
-    ![2升3](https://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/zh-CN/2013729951/p109801.png)
+    ![2升3](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/2013729951/p109801.png)
+
+    ![升级内核小版本新](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/3974317061/p188497.png)
 
 
 三节点企业版（原名：金融版）是面向高端企业级用户的云数据库系列。采用一主两备的三节点架构，通过多副本同步复制，确保数据的强一致性，提供金融级的可靠性。
@@ -35,13 +37,11 @@
 
 2.  在左侧单击**实例列表**，然后在上方选择实例所在地域。
 
-    ![选择地域](https://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/zh-CN/3074469951/p36543.png)
+    ![选择地域](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/3074469951/p36543.png)
 
 3.  找到目标实例，单击实例ID。
 
-4.  在**基本信息**页面，单击**升级到三节点企业版**。
-
-    ![升级到三节点企业版](https://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/zh-CN/2013729951/p65775.png)
+4.  在**配置信息**区域单击**升级到三节点企业版**。
 
 5.  设置如下参数。
 
